<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">APP Practica</string>
    <string name="stranger_things">Stranger Things</string>
    <string name="trailer_oficial">Trailer Oficial</string>
    <string name="las_mejores_selecciones">Las mejores selecciones</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="podes_ingresar_con">Ó podes ingresar con</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="continuar_como_invitado">Continuar como Invitado</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="la_contrase_a_debe_contener_8_caracteres">La contraseña debe contener 8 caracteres</string>
    <string name="aceptar">Aceptar</string>
    <string name="gu_a_de_episodios">Guía de episodios</string>
    <string name="agregar_a_la_lista_de_seguimiento">Agregar a la lista de seguimiento</string>
    <string name="lista_de_seguimiento">Lista de seguimiento</string>
    <string name="crea_una_lista_de_seguimiento_para_no_perderte_ninguna_pel_cula_o_serie_de_tv">Crea una lista de seguimiento para no perderte ninguna película o serie de tv.</string>
    <string name="empieza_tu_lista_de_seguimiento">Empieza tu lista de seguimiento</string>
    <string name="vistas_recientes">Vistas recientes</string>
    <string name="personas_favoritas">Personas favoritas</string>
    <string name="no_has_visitado_ninguna_p_gina_recientemente">No has visitado ninguna página recientemente.</string>
    <string name="no_has_agregado_ninguna_persona_recientemente">No has agregado ninguna persona recientemente.</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="play">Play</string>
    <string name="perfil">Perfil</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="juan_p_rez">Juan Pérez</string>
    <string name="atras">Atras</string>
    <string name="logo">Logo</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>


</resources>