<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.RegisterFragment">

    <data>
        <variable
            name="myViewModel"
            type="com.example.apppractica.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btn_back_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/atras" />

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/imvLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/imdb"
                    android:contentDescription="@string/logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/crear_una_cuenta"
                android:textColor="@color/color_gris_oscuro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_marginStart_register"
                android:layout_marginTop="@dimen/layout_marginTop_register"
                android:layout_marginEnd="@dimen/layout_marginEnd_register"
                app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadiusBottomEnd_register"
                app:boxCornerRadiusTopEnd="@dimen/boxCornerRadiusTopEnd_register"
                app:boxCornerRadiusBottomStart="@dimen/boxCornerRadiusBottomStart_register"
                app:boxCornerRadiusTopStart="@dimen/boxCornerRadiusTopStart_register"
                android:hint="@string/nombre"
                app:hintAnimationEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoregular"
                    android:textColor="@color/color_gris_claro"
                    android:inputType="textPersonName"
                    android:text="@={myViewModel.inputUsername}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCorreo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_marginStart_register"
                android:layout_marginTop="@dimen/layout_marginTop_register"
                android:layout_marginEnd="@dimen/layout_marginEnd_register"
                app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadiusBottomEnd_register"
                app:boxCornerRadiusTopEnd="@dimen/boxCornerRadiusTopEnd_register"
                app:boxCornerRadiusBottomStart="@dimen/boxCornerRadiusBottomStart_register"
                app:boxCornerRadiusTopStart="@dimen/boxCornerRadiusTopStart_register"
                android:hint="@string/correo_electr_nico"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoregular"
                    android:textColor="@color/color_gris_claro"
                    android:inputType="textEmailAddress"
                    android:text="@={myViewModel.inputEmail}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutContrasena"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_marginStart_register"
                android:layout_marginTop="@dimen/layout_marginTop_register"
                android:layout_marginEnd="@dimen/layout_marginEnd_register"
                app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadiusBottomEnd_register"
                app:boxCornerRadiusTopEnd="@dimen/boxCornerRadiusTopEnd_register"
                app:boxCornerRadiusBottomStart="@dimen/boxCornerRadiusBottomStart_register"
                app:boxCornerRadiusTopStart="@dimen/boxCornerRadiusTopStart_register"
                android:hint="@string/contrasenia"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextContrasena"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/robotoregular"
                    android:textColor="@color/color_gris_claro"
                    android:layout_height="wrap_content"
                    android:text="@={myViewModel.inputPassword}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/robotolightitalic"
                android:text="@string/la_contrase_a_debe_contener_8_caracteres"
                android:textColor="@color/color_gris_claro"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnAceptar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="39dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gray_button"
                android:onClick="@{()->myViewModel.sumbitButton()}">

                <TextView
                    android:id="@+id/tvAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_blanco"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>