<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">

    <data>
        <variable
            name="myLoginViewModel"
            type="com.example.apppractica.login.LoginViewModel" />
    </data>

    <ScrollView
        android:background="@color/color_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvLogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_login"
                android:layout_marginTop="@dimen/margin_login"
                app:srcCompat="@drawable/imdb" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_login"
                android:layout_marginTop="@dimen/layout_marginTop_login"
                android:text="@string/usuario"
                android:textColor="@color/color_gris_oscuro"
                android:textSize="@dimen/textSize_login"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:layout_marginStart="@dimen/margin_login"
                android:layout_marginTop="@dimen/marginTop_login"
                android:layout_marginEnd="@dimen/margin_login"
                android:background="@drawable/background_edt"
                android:ems="@dimen/ems_login"
                android:fontFamily="@font/robotolightitalic"
                android:inputType="textNoSuggestions"
                android:paddingStart="@dimen/paddingStart_login"
                android:textColorHint="@color/color_gris_claro"
                android:textSize="@dimen/text_login"
                android:text="@={myLoginViewModel.inputUsername}"/>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_login"
                android:layout_marginTop="@dimen/layout_marginTop_login"
                android:text="@string/contrase_a"
                android:textColor="@color/color_gris_oscuro"
                android:textSize="@dimen/textSize_login"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:layout_marginStart="@dimen/margin_login"
                android:layout_marginTop="@dimen/marginTop_login"
                android:layout_marginEnd="@dimen/margin_login"
                android:background="@drawable/background_edt"
                android:ems="@dimen/ems_login"
                android:fontFamily="@font/robotolightitalic"
                android:inputType="textPassword"
                android:paddingStart="@dimen/paddingStart_login"
                android:textColorHint="@color/color_gris_claro"
                android:textSize="@dimen/text_login"
                android:text="@={myLoginViewModel.inputPassword}"/>

            <TextView
                android:id="@+id/tvOlvidaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_login"
                android:layout_marginTop="@dimen/forget_marginTop_login"
                android:layout_marginEnd="@dimen/margin_login"
                android:fontFamily="@font/robotoregular"
                android:text="@string/olvidaste_la_contrase_a"
                android:textColor="@color/color_gris_claro"
                android:textSize="@dimen/text_login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_login"
                android:layout_marginTop="@dimen/marginTop_login"
                android:layout_marginEnd="@dimen/margin_login"
                android:background="@drawable/gray_button"
                android:onClick="@{()->myLoginViewModel.loginButton()}">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textColor="@color/color_blanco"
                    android:textSize="@dimen/text_btn_login"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop__login"
                android:fontFamily="@font/robotolightitalic"
                android:text="@string/podes_ingresar_con"
                android:textAlignment="center"
                android:textSize="@dimen/text_btn_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marginTop__login"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvApple"
                    android:layout_width="@dimen/width_img_login"
                    android:layout_height="@dimen/height_img_login"
                    android:layout_weight="@dimen/icon_layout_weight"
                    android:layout_marginLeft="@dimen/icon_marginLeft_login"
                    android:contentDescription="Apple"
                    app:srcCompat="@drawable/apple_circle" />

                <ImageView
                    android:id="@+id/imvFacebook"
                    android:layout_width="@dimen/width_img_login"
                    android:layout_height="@dimen/height_img_login"
                    android:layout_weight="@dimen/icon_layout_weight"
                    android:contentDescription="Facebook"
                    app:srcCompat="@drawable/facebook_circle" />

                <ImageView
                    android:id="@+id/imvGoogle"
                    android:layout_width="@dimen/width_img_login"
                    android:layout_height="@dimen/height_img_login"
                    android:layout_weight="@dimen/icon_layout_weight"
                    android:layout_marginRight="@dimen/icon_marginRight_login"
                    android:contentDescription="Google"
                    app:srcCompat="@drawable/google_circle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marginTop_login"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolightitalic"
                    android:text="@string/no_tienes_cuenta"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_login" />

                <Button
                    android:id="@+id/btnRegistrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_strate"
                    android:textAllCaps="false"
                    android:textColor="@color/color_negro"
                    android:fontFamily="@font/robotolightitalic"
                    android:textSize="@dimen/text_login"
                    android:textStyle="bold"
                    android:background="@color/color_fondo"
                    android:onClick="@{()->myLoginViewModel.signUP()}"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvInvitado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_login"
                android:fontFamily="@font/robotobold"
                android:text="@string/continuar_como_invitado"
                android:textAlignment="center"
                android:textColor="@color/color_negro"
                android:textSize="@dimen/text_btn_login" />
        </LinearLayout>
    </ScrollView>
</layout>